<resources>
    <string name="app_name">Readify</string>
    <string name="str_submit">Log in</string>
    <string name="srt_register">Not registered? Register here</string>
    <string name="capture">Capture Image</string>
    <string name="detect">Detect Text</string>
    <string name="already_have_an_account_login_here">Already have an Account? Login here</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="password">PASSWORD</string>
    <string name="username">EMAIL</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="play">Play</string>
    <string name="forgot_password">Forgot Password? Reset Here</string>
    <string name="image_to_be_processed">Image to be processed</string>
    <string name="logout">Logout</string>
    <string name="pause">Pause</string>
</resources>