<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".SignUpActivity">
    <EditText
        android:id="@+id/su_et_email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:background="@drawable/custom_border"
        android:backgroundTint="@color/colorTextBg"
        android:textColor="@color/colorPrimary"
        android:paddingEnd="0dp"
        android:hint="@string/username"
        android:textColorHint="@color/colorGrey"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/su_et_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:background="@drawable/custom_border"
        android:backgroundTint="@color/colorTextBg"
        android:textColor="@color/colorPrimary"
        android:paddingEnd="0dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorGrey"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_et_email" />
    <EditText
        android:id="@+id/su_et_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:background="@drawable/custom_border"
        android:backgroundTint="@color/colorTextBg"
        android:textColor="@color/colorPrimary"
        android:paddingEnd="0dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/colorGrey"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_et_password" />

    <Button
        android:id="@+id/su_bt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:background="@drawable/custom_border"
        android:text="@string/sign_up"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_et_confirm_password" />

    <TextView
        android:id="@+id/su_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/already_have_an_account_login_here"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_bt_submit" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/su_bt_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_et_confirm_password" />
</androidx.constraintlayout.widget.ConstraintLayout>