<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_recog_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:openDrawer="start"
    android:scrollbars="vertical"
    tools:context=".TextRecognition">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="@color/colorBlack"
                android:background="@color/colorPrimary"
                app:title="@string/app_name" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:contentDescription="@string/image_to_be_processed" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/capture_image"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/text_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view" />
            </ScrollView>

            <Button
                android:id="@+id/capture_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/custom_border"
                android:backgroundTint="@color/colorWhite"
                android:drawableEnd="@drawable/icon_camera_white"
                android:text="@string/capture"
                android:drawableTint="@color/colorRed"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/detect_text"

                app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/detect_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/custom_border"
            android:text="@string/detect"
            android:drawableEnd="@drawable/icon_text"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:backgroundTint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".40" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/play"
            android:drawableEnd="@drawable/icon_play"
            android:drawableTint="@color/colorPrimary"
            android:backgroundTint="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.40"
            android:textColor="@color/colorBlack"
            android:background="@drawable/custom_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

             />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_menu"
        android:backgroundTint="@color/colorRed"
        app:itemTextColor="@color/colorWhite"
        app:itemIconTint="@color/colorWhite"
        app:menu="@menu/icon_menu"
        android:padding="5dp"
        app:itemIconPadding="10dp"
        app:itemHorizontalPadding="15dp"
        app:itemShapeInsetTop="5dp"
        app:itemShapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Nav"
        app:headerLayout="@layout/header_menu"
        android:layout_gravity="start"
        >


    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>